	 {in,out}: update tests for IR contention.
20060730 Makefile.am,loader.[ch],menu.c,settings.dat,spectrum.c,tape.[ch],
	 ula.c,lib/{un,}compressed/tape_{16,48,128,plus2,pentagon,scorpion,
	 2048,ts2068}.szx,ui/options.dat: loader detection (patch
	 #1511906).
20060730 tape.c: don't use tape traps unless we're at the very start of a
	 ROM block (partial fix for bug #1531346).
20060731 display.[ch],event.[ch],machine.[ch],memory.c,scld.c,screenshot.c,
         machines/{scorpion.c,spec128.c,specplus3.c},
         hacking/implementation_notes.txt: new character based renderer fixes
         regressions with various demos and mixed mode Timex screens (fixes
         bug #1105190) (Fred).
20060801 display.c: integrate border with display_last_screen and use
         display_plot8 for drawing (Fred).
20060801 event.c: store old events in a free list rather than mallocing and
         freeing them each time (Fred).
20060809 event.c: use a single free element pointer rather than a list for
         more speed (Fred).
20060809 display.c: don't use get_beam_position in display_write, replace the
         three individual display cache elements with a single dword for faster
         aligned access, comparison and assignment (Fred).
20060810 display.c: bulk allocate border changes (helps with Shock II
         performance) (Fred).
20060810 event.c: display events are frequent and nearly always added to the
         front, and there is only one outstanding at any one time. Add a
         dedicated slot for display events which are being added to the head
         of the queue (Fred).
20060810 display.[ch]: make display_get_addr a macro and make border_changes
         an array rather than a gslist (more Shock II performance) (Fred).
20060812 display.[ch],memory.c,scld.c,machines/spec128.c: put chunks on a
         checklist when written to and shortcircuit ULA reads where there is
         no chance changes have been made to the screen (Fred).