@@ -51,7 +51,6 @@ typedef enum event_type {
   EVENT_TYPE_TRDOS_CMD_DONE,
   EVENT_TYPE_TRDOS_INDEX,
   EVENT_TYPE_TIMER,
-  EVENT_TYPE_DISPLAY_WRITE,
 
 } event_type;
 
